# agentkit-platform-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
src/: agentkit_client.py  server.py
src/tools/: __init__.py  cli_tools.py  runtime_tools.py
src/utils/: tool_helpers.py
